--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,302 @@
-/* место для вашего кода */
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  max-width: 1440px;
+  margin: 0 auto;
+  color: #000;
+}
+
+.header {
+  width: 1340px;
+  margin: 92px 49px 92px 51px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.menu {
+  place-self: center start;
+  font-size: 18px;
+}
+
+.header_links-list {
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  list-style: circle;
+  text-transform: lowercase;
+}
+
+.item_no-bullit {
+  list-style: none;
+}
+
+.link_active {
+  text-decoration: none;
+}
+
+.underline {
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+}
+
+.header_logo {
+  display: block;
+  place-self: center;
+}
+
+.header__logo-image {
+  margin-bottom: 4px;
+  width: 148px;
+  height: 105px;
+}
+
+.address {
+  font-size: 18px;
+  line-height: 1.35;
+}
+
+.header_address {
+  place-self: center end;
+}
+
+.cover {
+  position: relative;
+  z-index: -1;
+  background-image: url(/images/cover.jpg);
+  width: 1440px;
+  min-height: 500px;
+  margin-bottom: 180px;
+  
+}
+
+.background_settings {
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+}
+
+.cover_title {
+  display: flex;
+  position: relative;
+  z-index: 1;
+  color: #FFF;
+  font-size: 100px;
+  font-weight: 700;
+  text-transform: uppercase;
+  padding: 165px 50px 135px;
+  flex-direction: column;
+  gap: 20px;
+  line-height: 1;
+}
+
+.cover_description {
+  position: relative;
+  z-index: 1;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.aligned-text_left {
+  line-height: 1.15;
+}
+
+.aligned-text_center {
+  text-align: center;
+}
+
+.aligned-text_right {
+  text-align: right;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 30px;
+}
+
+.letter-spacing-additional {
+  letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.cover_description {
+  padding: 0 50px 50px 0; 
+  display: grid;
+  grid-template-columns: auto 257px;
+  gap: 78px;
+  color: #FFF;
+  text-align: center;
+  font-size: 22px;
+  text-transform: uppercase;
+} 
+
+.cover_description-text {
+  place-self: center end;
+  line-height: 28px;
+  word-spacing: 18px;
+}
+
+.bet_button {
+  place-self: center end;
+  border: 1px solid #FFF;
+  padding: 12px 32px;
+  font-size: 22px;
+  text-transform: uppercase;;
+}
+
+.overlay {
+  position: absolute;
+  inset: 0;
+  z-index: 0;
+  background: rgba(0, 0, 0, .6);
+}
+
+.lots {
+  width: 1340px;
+  margin: 180px 50px 181px;
+}
+
+.lots_heading {
+  margin-left: 40px;
+  text-transform: uppercase;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.card-list {
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 25px;
+  flex-wrap: wrap;
+  margin: 27px 0 30px;
+}
+
+.card-list-item {
+  width: 430px;
+  height: 450px;
+  color: #FFF;
+  line-height: 1.2;
+  flex-grow: 1;
+  padding: 50px 40px;
+  display: flex;
+  position: relative;
+  z-index: -1;
+}
+
+.card-link {
+  display: flex;
+  height: 100%;
+  text-decoration: none;
+}
+
+.card_content {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  z-index: 1;
+}
+
+.card_title {
+  text-decoration: underline;
+  text-transform: uppercase;
+  font-weight: 700;
+  font-size: 22px;
+}
+
+.card_text {
+  font-size: 20px;
+}
+
+.card_type_film {
+  background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(/images/card-lot-03.jpg);
+}
+
+.lots_look-more-link {
+  margin-left: 40px;
+  font-size: 20px;
+  text-transform: lowercase;
+}
+
+.about {
+  width: 1340px;
+  margin: 181px 50px 180px;
+  display: grid;
+  grid-template-columns: 430px auto;
+  gap: 0 25px;
+}
+
+.about_logo {
+  width: 240px;
+  height: 240px;
+  border-radius: 120px;
+  background-color: #000;  
+  padding: 63px 46px;
+  grid-row: 1/4;
+  grid-column: 1/2;
+  place-self: start center;
+}
+
+.about_title {
+  font-size: 40px;
+  font-weight: 700;
+  text-transform: uppercase;
+  grid-row: 1/2;
+  grid-column: 2/3;
+  margin: 100px 0 100px;
+}
+
+.about_text {
+  font-size: 20px;
+  grid-row: 2/3;
+  grid-column: 2/3;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+}
+
+.footer {
+  width: 1340px;
+  margin: 180px 50px 90px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.footer_address {
+  place-self: start;
+}
+
+.footer_menu-list {
+  list-style: none;
+  text-align: center;
+  text-transform: lowercase;
+  color: #000;
+  font-size: 18px;
+}
+
+.footer_social-list {
+  width: 240px;
+  list-style: none;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  place-self: start end;
+}
+
+.footer_social-icon {
+  width: 48px;
+}
