Изменены пути до изображений в css

--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@ body {
 .cover {
   position: relative;
   z-index: 1;
-  background-image: url(/images/cover.jpg);
+  background-image: url(../images/cover.jpg);
   max-width: 1440px;
   min-height: 500px;
   margin-bottom: 180px;
@@ -218,15 +218,15 @@ body {
 }
 
 .card_type_film {
-  background-image: url(/images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_book {
-  background-image: url(/images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-  background-image: url(/images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .lots_look-more-link {
